fw-cloud.rules
# Generated by iptables-save v1.6.0 on Tue Aug  1 16:09:32 2023
*nat
:PREROUTING ACCEPT [1227256:65716045]
:INPUT ACCEPT [152009:22624655]
:OUTPUT ACCEPT [21075:1545870]
:POSTROUTING ACCEPT [21075:1545870]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8888
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8888
COMMIT
# Completed on Tue Aug  1 16:09:32 2023
# Generated by iptables-save v1.6.0 on Tue Aug  1 16:09:32 2023
*filter
:INPUT ACCEPT [840:166134]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [742:75891]
-A INPUT -s 10.15.16.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.15.17.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.6.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.28.0.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.15.17.128/25 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 131.0.232.23/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 131.0.232.23/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A f2b-sshd -s 218.92.0.118/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.101.88.247/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 218.92.0.27/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.101.88.234/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
COMMIT
# Completed on Tue Aug  1 16:09:32 2023
