fw.rules
# Generated by iptables-save v1.4.21 on Thu Nov 25 15:00:13 2021
*filter
:INPUT ACCEPT [1359:158832]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1153:150216]
-A INPUT -s 131.0.232.32/27 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 131.0.232.32/27 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 131.0.232.65/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 131.0.232.65/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.133.10/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.133.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.240.10/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.240.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 69.164.222.222/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 69.164.222.222/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.68/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.68/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.136/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.136/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 5.9.150.111/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 5.9.150.111/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.112.149/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.112.149/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.115.68/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.115.68/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.112.47/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.112.47/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.117/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.117/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.150/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.150/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 37.202.48.183/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 37.202.48.183/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.43.6.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.43.6.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 3.138.84.172/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 3.138.84.172/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 3.22.206.235/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 3.22.206.235/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 18.220.239.166/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 18.220.239.166/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 193.104.107.0/27 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 193.104.107.0/27 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.125/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.125/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.126/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.126/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.127/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.127/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.168/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.168/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.169/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.169/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.170/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.170/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.171/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.171/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.55/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.55/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.47/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.47/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.229/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.229/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.230/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.230/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.231/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.231/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 51.195.4.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 51.195.4.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 142.132.212.151/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 142.132.212.151/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.89.98/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.89.98/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.44.30/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.44.30/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.199.48.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.199.48.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.17.51/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.17.51/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.12.12/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.12.12/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.0.92/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.0.92/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.9/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.9/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.14/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.14/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.39/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.39/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.40/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.40/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.41/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.41/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.42/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.42/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 116.202.210.159/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 116.202.210.159/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 148.251.34.241/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 148.251.34.241/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 91.194.93.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 91.194.93.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 202.45.148.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 202.45.148.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.6.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.6.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 15.223.107.141/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 15.223.107.141/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 176.9.119.117/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 176.9.119.117/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.131.42/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.131.42/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.205.149/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.205.149/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.203.148/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.203.148/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.35/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.35/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.34/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.34/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 142.93.244.173/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 142.93.244.173/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 206.189.184.107/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 206.189.184.107/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 67.205.185.246/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 67.205.185.246/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 69.46.233.100/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 69.46.233.100/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.99/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.99/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.158/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.158/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.130/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.130/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.15/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.15/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.217.70.115/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.217.70.115/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.119.209/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.119.209/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.227.83.180/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.227.83.180/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.216/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.216/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.0.203/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.0.203/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 209.151.153.253/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 209.151.153.253/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.148.137.69/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.148.137.69/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 172.20.111.0/27 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 172.20.111.0/27 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 116.202.168.53/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 116.202.168.53/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 49.12.147.132/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 49.12.147.132/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.71/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.71/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.72/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.72/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 38.91.106.102/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 38.91.106.102/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.145/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.145/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 178.22.10.96/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 178.22.10.96/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 178.22.10.80/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 178.22.10.80/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 181.124.59.59/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 181.124.59.59/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 38.69.134.1/26 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 38.69.134.1/26 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 149.56.30.238/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 149.56.30.238/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 50.116.48.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 50.116.48.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.88.7/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.88.7/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 5.9.94.90/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 5.9.94.90/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 192.31.50.187/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 192.31.50.187/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 192.31.50.188/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 192.31.50.188/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.182.173.99/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.182.173.99/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 15.204.165.175/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 15.204.165.175/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 167.99.11.84/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 167.99.11.84/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.19/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.19/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.212/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.212/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.44/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.44/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.240/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.240/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.247/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.247/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.0.90.33/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.0.90.33/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.0.90.72/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.0.90.72/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.57.142.120/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.57.142.120/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.82/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.82/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.83/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.83/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.25/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.25/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.31/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.31/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.55.243.167/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.55.243.167/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.27.84/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.27.84/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.111.211.201/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.111.211.201/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 201.216.238.120/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 201.216.238.120/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.65.149.24/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.65.149.24/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.65.149.23/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.65.149.23/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 157.90.177.184/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 157.90.177.184/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.104/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.104/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.112/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.112/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 38.142.194.250/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 38.142.194.250/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 38.142.195.2/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 38.142.195.2/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 46.4.103.138/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 46.4.103.138/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 94.232.243.50/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 94.232.243.50/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 94.232.243.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 94.232.243.10/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 94.232.243.11/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 94.232.243.11/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.16.179/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.16.179/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.16.178/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.16.178/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.16.177/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.16.177/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.2.146/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.2.146/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.2.158/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.2.158/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.2.145/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.2.145/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.47.91.162/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.47.91.162/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 51.77.77.223/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 51.77.77.223/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 89.31.241.210/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 89.31.241.210/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 192.210.11.210/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 192.210.11.210/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 192.210.11.220/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 192.210.11.220/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.189.27.210/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.189.27.210/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.87.240/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.87.240/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.221.30.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.221.30.10/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.12.84.99/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.12.84.99/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 135.181.128.34/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 135.181.128.34/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 181.229.94.170/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 181.229.94.170/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 170.150.155.186/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 170.150.155.186/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.251.49.100/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.251.49.100/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.251.49.103/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.251.49.103/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 64.34.25.133/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 64.34.25.133/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.104.200.210/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.104.200.210/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.153.163.186/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.153.163.186/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 154.48.201.35/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 154.48.201.35/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.137.145.74/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.137.145.74/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 181.47.108.120/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 181.47.108.120/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.17.119.244/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.17.119.244/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 168.226.219.34/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 168.226.219.34/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.111.201.162/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.111.201.162/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 181.46.31.66/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 181.46.31.66/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.13.140.57/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.13.140.57/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.113.164/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.113.164/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 199.73.53.210/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 199.73.53.210/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 52.176.167.125/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 52.176.167.125/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.10.96.157/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.10.96.157/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.104.244.42/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.104.244.42/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.111.204.19/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.111.204.19/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.137.157.171/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.137.157.171/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 191.235.102.244/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 191.235.102.244/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 20.12.202.59/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 20.12.202.59/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 52.180.138.221/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 52.180.138.221/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.43.248.179/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.43.248.179/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 20.83.30.137/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 20.83.30.137/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.78.50/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.78.50/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.78.176/28 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.78.176/28 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 64.23.178.46/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 64.23.178.46/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 192.31.50.40/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 192.31.50.40/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 10.240.0.14/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.240.0.14/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 116.203.55.139/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 116.203.55.139/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.169.129/28 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.169.129/28 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.234.160.6/25 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.234.160.6/25 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.123.180.109/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.123.180.109/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 149.56.110.25/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 149.56.110.25/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 201.212.157.47/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 201.212.157.47/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.7.6.20/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.7.6.20/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.216.94.130/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.216.94.130/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.123.142.197/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.123.142.197/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.216.94.131/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.216.94.131/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.34.89/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.34.89/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 34.73.160.206/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 34.73.160.206/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.72/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.72/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.74/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.74/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.81/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.81/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.82/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.82/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.83/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.83/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.84/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 203.90.232.84/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 154.23.127.3/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 154.23.127.3/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 154.23.127.4/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 154.23.127.4/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 64.176.8.141/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 64.176.8.141/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.32.61.214/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.32.61.214/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 141.148.87.228/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 141.148.87.228/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 136.248.93.187/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 136.248.93.187/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.119.31.218/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.119.31.218/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 18.220.80.216/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 18.220.80.216/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.80/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.80/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.81/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.81/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.82/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.82/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.83/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.83/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.84/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.167.84/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.161/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.161/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.136/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.136/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.135/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.135/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.176/28 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.176/28 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 109.248.214.0/27 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 109.248.214.0/27 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.75.24/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.75.24/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.23/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.23/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.134/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.200.134/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.25/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.25/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.31/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.152.202.31/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.36.122/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.36.122/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.36.169/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.36.169/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.52.176/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.52.176/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.64.101/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 57.129.64.101/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.119.31.219/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.119.31.219/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.196.208.112/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.196.208.112/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 148.113.207.86/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 148.113.207.86/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.193.188.223/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.193.188.223/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.13.17.113/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.13.17.113/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -p udp --dport 5080 -j DROP
-A INPUT -p tcp --dport 5080 -j DROP
-A INPUT -p tcp -m tcp --dport 5060 -j DROP
-A INPUT -p udp -m udp --dport 5060 -j DROP
-A INPUT -p udp -m string --string "VaxSIPUserAgent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "friendly-scanner" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "sipcli" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m string --string "VaxSIPUserAgent" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m string --string "friendly-scanner" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m string --string "sipcli" --algo bm --to 65535 -j DROP
COMMIT
# Completed on Thu Nov 25 15:00:13 2021
